<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.thirdworlds.wakeonlan.MainActivity">
    <item
            android:id="@+id/action_remove_all"
            android:title="@string/action_remove_all"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_import"
            android:title="@string/action_import"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_export"
            android:title="@string/action_export"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_license"
            android:title="@string/action_license"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>